--- a/css/styles.css
+++ b/css/styles.css
@@ -1,173 +1,232 @@
-/* ID Selector */
-#title{
-    background-color: #ff4c68;
-    color: #ffffff;
-    position: relative;
-}
+/*********** tag Selectors ***********/
 
-/* Tag Selector */
-body{
+body {
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
+    text-align: center;
 }
 
-h1{
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 900;
-    font-size: 3.5rem;
-    line-height: 1.5;
-}
-h2{
+h1,h2,h3,h4,h5,h6 {
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
+}
+
+p {
+    color: #C0C0C0;
+}
+
+
+/*********** Headings ***********/
+
+.big-heading {
+    font-weight: 900;
+    font-size: 3rem;
+    line-height: 1.5;
+}
+
+.section-heading {
     font-size: 2.5rem;
     line-height: 1.5;
 }
-h3{
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 700;
-    line-height: 1.5;
+
+
+/********* Container Section **********/
+.container-fluid {
+    padding: 7% 15%;
 }
 
-/* Class Selector */
-.container-fluid{
-    padding: 3% 15% 7%;
+.colored-section{
+    background-color: #ff4c68;
+    color: #ffffff;
 }
 
-/* Title Section */
+.white-section{
+    background-color: #ffffff;
+}
+
+/*********** Title Section ***********/
+
+#title .container-fluid {
+    padding: 3% 15% 5%;
+    text-align: left;
+}
+
+
 /* Navigation bar */
-.navbar{
+.navbar {
     padding: 0 0 4.5rem;
 }
 
-.navbar-brand{
+.navbar-brand {
     font-family: 'Ubuntu', sans-serif;
     font-weight: 700;
     font-size: 2.5rem;
 }
 
-.nav-item{
+.nav-item {
     padding: 0 18px;
 }
-.nav-link{
+
+.nav-link {
     font-size: 1.2rem;
-    font-family: 'Montserrat', sans-serif;
     font-weight: 300;
 }
 
 /* Download Button */
-.btn-download{
+.btn-download {
     margin: 5% 3% 5% 0;
 }
 
-.rotate-img{
+.rotate-img {
     width: 60%;
     transform: rotate(25deg);
     position: absolute;
     right: 30%;
 }
 
-/* Feature Section */
 
-#features{
-    padding: 7% 15%;
-    background-color: #ffffff;
+/*********** Feature Section ***********/
+#features {
     position: relative;
 }
-.features-box{
-    text-align: center;
-    padding:5%;
+
+.features-title {
+    font-size: 1.5rem;
 }
-.image-features{
+
+.features-box {
+    padding: 3%;
+}
+
+.image-features {
     color: #ef8172;
     padding-bottom: 1rem;
 }
 
-.image-features:hover{
+.image-features:hover {
     color: #ff4c68;
 }
 
-.header-features{
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 700;
-    font-size: 1.5rem;
+.text-features {
+    color: #8f8f8f;
 }
 
-.text-features{
-    color:#8f8f8f;
+/*********** Testemonial Section ***********/
+#testimonials {
+    background-color: #ef8172;
+    position: relative;
+    z-index: 1;
 }
 
-/* Testimonials Section */
-#testimonials{
-
-    background-color: #ff4c68;
-    text-align: center;
-    color: #ffffff;
+.testimonial-text {
+    font-size: 2.5rem;
+    line-height: 1.5;
 }
 
-.testimonial-image{
+.testimonial-image {
     width: 10%;
     border-radius: 100%;
     margin: 20px;
 }
-.carousel-item{
-    padding: 7% 15%;
-}
-/* Press Sections */
-#press{
-    background-color: #ff4c68;
-    text-align: center;
+
+/*********** Press Section ***********/
+#press {
+    background-color: #ef8172;
     padding-bottom: 3%;
 }
 
-.press-logo{
+.press-logo {
     width: 15%;
     margin: 20px 20px 50px;
 }
-
-#pricing{
-    padding: 100px;
-    text-align: center;
-}
-.pricing-column{
-    padding: 3% 2%;
+/*********** Pricing Section ***********/
+.price-text {
+    font-size: 2.5rem;
+    line-height: 1.5;
 }
 
-/* Call to action Section */
-#cta{
-    background-color: #ff4c68;
-    padding: 7% 20%;
-    text-align: center;
-}
-.cta-text{
-    font-weight: 900;
-    font-size: 3rem;
+.pricing-column {
+    padding: 3%;
 }
 
-.btn-cta{
-    margin: 5% 3% 3% 0;
-}
-/* Footer Section */
-#footer{
-    background-color: #ffffff;
-    text-align: center;
-    padding:5% 10%;
-}
-.footer-img{
+/*********** CTA Section ***********/
+/*********** Footer Section ***********/
+.footer-img {
     padding: 10px 10px 20px;
 }
-.footer-text{
-    color: #C0C0C0;
-}
 
-/* Media Quesry for Title Section */
-@media (max-width: 1028px){
-    #title{
+
+/****************** Media Quesry for Title Section **************/
+
+@media (max-width: 1028px) {
+    
+/*********************Tag Selectors*************************/
+    p{
+        font-size: .8rem;        
+    }
+
+/*********************Class Selectors*************************/
+    /******************Heading Section***********************/
+    .big-heading {
+        font-size: 2rem;
+        line-height: 1.5;
+    }
+
+    .section-heading {
+        font-size: 1.5rem;
+        line-height: 1.5;
+    }
+
+   /******************Title Section***********************/ 
+    #title .container-fluid{
         text-align: center;
     }
-    .rotate-img{
+    /* Navigation bar */
+    .navbar {
+        padding: 0 0 2rem;
+    }
+        .nav-item {
+        padding: 0 10px;
+    }
+        .navbar-brand {
+        font-size: 1.5rem;
+    }
+    .nav-link {
+        font-size: 1rem;
+    }
+
+    /* Download Button */
+    .btn-download {
+        margin: 2% 0 5% 0;
+        font-size: 1rem;
+    }
+
+    .rotate-img {
         position: static;
         transform: rotate(0);
- 
+    }
+    /******************Title Section***********************/ 
+    .features-title {
+        font-size: 1rem;
+    }
+    /*********** Testemonial Section ***********/
+    .testimonial-text {
+        font-size: 1rem;
+        line-height: 1.5;
+    }
+
+    .testimonial-image {
+        width: 15%;
+        margin: 10px;
+    }
+
+    /*********** Press Section ***********/
+    .press-logo {
+        width: 30%;
+        margin: 10px 10px 30px;
+    }
+    /*********** Pricing Section ***********/
+    .price-text {
+        font-size: 1.3rem;
     }
 }
